Fixed an issue with background not streching full width on mobile

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,3 +1,20 @@
+/* ----- General ------ */
+
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+@media(min-width:768px) {
+    .section-subheading {
+        margin-left: 200px;
+        margin-right: 200px;
+    }
+}
+
 .flex {
     display: flex;
 }
@@ -16,16 +33,6 @@
 
 .align-base {
     align-items: baseline;
-}
-
-
-/* ----- General ------ */
-
-@media(min-width:768px) {
-    .section-subheading {
-        margin-left: 200px;
-        margin-right: 200px;
-    }
 }
 
 /* ----- Header ------ */
@@ -80,7 +87,7 @@
     color: #FED136;
 }
 
-/* Header Mobile View*/
+/*Header Mobile View*/
 
 @media(max-width:768px) {
     .intro-main {
@@ -135,7 +142,7 @@
     height: 100px;
 }
 
-/* Product Media*/
+/*Product Media*/
 
 @media(min-width:768px) {
     #product .col-md-6 {
@@ -143,6 +150,8 @@
         padding-right: 60px;
     }
 }
+
+/* ----- Code ------ */
 
 #code .timeline-panel .timeline-heading .project-titel {
         color: #FED136;
@@ -187,7 +196,7 @@
     margin-top: -12px;
 }
 
-/* Code  Media*/
+/*Code Media*/
 
 @media(min-width:768px) {
     #code #brain-bites {
